--- a/fhir_proxy/.env
+++ b/fhir_proxy/.env
@@ -2,7 +2,7 @@
 AUTH_SERVER_URL=http://localhost:8001
 SECURITY_TAG_PREFIX=gen3
 PROXY_TIMEOUT=30.0
-ARBORIST_URL = ""  # Arborist endpoint to get allowed resource tags
-HAPI_FHIR_URL = "http://localhost:8080"  # Base URL of the HAPI FHIR server
-SECURITY_TAG_PREFIX = "gen3|"  # Prefix for security tags to add to FHIR queries
-ARBORIST_TIMEOUT = 5  # Timeout in seconds for Arborist calls
+ARBORIST_URL = ""  
+HAPI_FHIR_URL = "http://localhost:8080"  
+SECURITY_TAG_PREFIX = "gen3|"  
+ARBORIST_TIMEOUT = 5  
