--- a/fhir_proxy/pyproject.toml
+++ b/fhir_proxy/pyproject.toml
@@ -4,15 +4,18 @@ version = "0.1.0"
 description = "FHIR Proxy Service"
 authors = ["sielliandriana@gmail.com"]
 license = "MIT"
+packages = [{ include = "fhir_proxy" }]
 
 [tool.poetry.dependencies]
 python = "^3.9"
 fastapi = "^0.95.2"
-uvicorn = "^0.22.0"
+uvicorn = { extras = ["standard"], version = "^0.22.0" }
 httpx = "^0.24.1"
 python-jose = "^3.3.0"
 python-dotenv = "^1.0.0"
-starlette = "^0.26.1"
+starlette = "^0.27.0"
+
+gunicorn = "^23.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
