--- a/Docker/.env
+++ b/Docker/.env
@@ -1,7 +1,7 @@
-AUTH_SERVER_URL=http://localhost:8001
-SECURITY_TAG_PREFIX=gen3
-PROXY_TIMEOUT=30.0
-ARBORIST_URL = ""  
-HAPI_FHIR_URL = "http://localhost:8080"  
-SECURITY_TAG_PREFIX = "gen3|"  
-ARBORIST_TIMEOUT = 5  
+AUTH_SERVER_URL=
+SECURITY_TAG_PREFIX=
+PROXY_TIMEOUT=
+ARBORIST_URL = 
+HAPI_FHIR_URL =  
+SECURITY_TAG_PREFIX =  
+ARBORIST_TIMEOUT = 
